--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
-lib_deps = dlloydev/ESP32 ESP32S2 AnalogWrite@^5.0.2
+lib_deps = 
+	dlloydev/ESP32 ESP32S2 AnalogWrite@^5.0.2
+	robtillaart/AS5600@^0.6.1
